<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M9</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
                </plugin>
        </plugins>
    </build>
    <parent>
        <groupId>org.openmrs.module</groupId>
        <artifactId>labonfhir</artifactId>
        <version>1.5.2</version>
    </parent>

    <artifactId>labonfhir-api</artifactId>
    <packaging>jar</packaging>
    <name>Lab on FHIR API</name>
    <description>API project for FHIR-based laboratory workflows</description>

    <dependencies>
        <dependency>
			<groupId>org.openmrs.api</groupId>
			<artifactId>openmrs-api</artifactId>
		</dependency>
        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>fhir2-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
</project>
